--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@
         <button class="info">Information about app!</button>
     </div>
 </main>
-<script src="index.js"></script>
+<script src="src/index.js"></script>
 </body>
 </html>
